--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -604,4 +604,81 @@
     \end{proof}
 \end{teo}
 
+\begin{definicion}
+    Decimos que un e.t. es \textbf{simplemente conexo} si es arcoconexo y su grupo fundamental es el trivial en un punto (y, por tanto, en cualquier punto).
+\end{definicion}
+
+\begin{ejemplo}
+    Si $A\subset \bb{R}^n$ es estrellado desde un punto $x_0$, entonces $A$ es simplemente conexo.
+\end{ejemplo}
+
+\begin{lema}
+    Sea $f:X\to Y$ una aplicación continua entre espacios topológicos y $x\in X$. Entonces la aplicación
+    \begin{align*}
+        (f_x)_* : \pi_1(X,x) &\to \pi_1(Y,f(x))\\
+        [\alpha] &\mapsto [f\circ \alpha]
+    \end{align*}
+    está bien definida y es un homomorfismo de grupos\footnote{Cuando no haya confusión posible escribiremos solamente $f_*$ en lugar de $(f_x)_*$}.
+
+    \begin{proof}
+        Para ver que $(f_x)_*$ está bien definida tomamos $\alpha_1,\ \alpha_2$ lazos basados en $x$ tales que $[\alpha_1] = [\alpha_2]$. Queremos comprobar que $[f\circ \alpha_1] = [f\circ \alpha_2]$. Para ello , sabemos que si $[\alpha_1] = [\alpha_2]$, entonces existe $H:[0,1]\to X$ continua y tal que
+        \begin{gather*}
+            H(s,0) =\alpha_1(s)\ \ \  ,\ \ \ H(s,1) = \alpha_2(s)\ \ \ , \ \ \ H(0,t)=x=H(1,t)
+        \end{gather*}
+        Entonces podemos considerar la aplicación 
+        \begin{align*}
+            f\circ H : [0,1]\times [0,1] \to Y
+        \end{align*}
+        que es continua y verifica 
+        \begin{gather*}
+            (f\circ H) (s,0) = (f \circ \alpha_1)(s)\\
+            (f\circ H) (s,1) = (f\circ \alpha_2)(s)\\
+            (f\circ H) (0,t) = f(x) = (f\circ H) (1,t)
+        \end{gather*}
+        por lo que $[f\circ \alpha_1] = [f\circ \alpha_2]$. Veamos ahora que $(f_x)_*$ es un homomorfismo de grupos, es decir que se verifica
+        \begin{gather*}
+            (f_x)_* ([\alpha] \ast [\beta] ) = (f_x)_* ([\alpha]) \ast (f_x)_* ([\beta])
+        \end{gather*}
+        Por definición sabemos que 
+        \begin{gather*}
+            (f_x)_* ([\alpha] \ast [\beta] ) = (f_x)_*([\alpha \ast \beta]) = [f\circ(\alpha \ast \beta)] = \left[\left\{
+                \begin{array}{l c c}
+                    f(\alpha(2s)) & \text{ si } & 0\leq s \leq \nicefrac{1}{2}\\
+                    f(\beta(2s-1)) & \text{ si } & \nicefrac{1}{2} \leq s \leq 1\\
+                \end{array}
+            \right.\right]=\\
+            =[(f\ast \alpha) \ast (f\circ \beta)] = (f_x)_* ([\alpha]) \ast (f_x)_* ([\beta])
+        \end{gather*}
+    \end{proof}
+\end{lema}
+
+\begin{definicion}
+    A la aplicación $f_x$ dada por el lema la llamaremos \textbf{homomorfismo inducido} por $f$.
+\end{definicion}
+
+\begin{propiedades}
+    Algunas propiedades básicas de $f_x$ son
+    \begin{enumerate}
+        \item Si tenemos dos aplicaciones continuas $f:X\to Y$ y $g:Y \to Z$, entonces se tiene que 
+        \begin{gather*}
+            (g\circ f)_* = g_x \circ f_x
+        \end{gather*}
+
+        \item  Se verifica que la aplicación dada por
+        \begin{align*}
+            Id_x: \pi_1(X,x_0) &\to \pi(X,x_0)\\
+            [\alpha] & \mapsto [\alpha]
+        \end{align*}
+        es la identidad en grupos fundamentales.
+    \end{enumerate}
+\end{propiedades}
+
+\begin{coro}
+    Si $h:X\to Y$ es un homeomorfismo, entonces la aplicación dada por
+    \begin{gather*}
+        (h_x)_*:\pi_1(X,x) \to \pi_1(Y,h(x))
+    \end{gather*}
+    es un isomorfismo de grupos, es decir, el grupo fundamental se conserva\footnote{salvo isomorfismo} por homeomorfismos.
+\end{coro}
+
 
